--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mt-vite",
+  "name": "mt-vite-vanilla-demo",
   "version": "0.0.1",
-  "description": "Muiti target Vite!",
+  "description": "mt-vite vanilla demo",
   "license": "MIT",
   "author": {
     "name": "mzwing",
@@ -26,9 +26,7 @@
     "lint:html": "htmlhint \"**/*.html\""
   },
   "maintainers": [
-    "mzwing",
-    "so1ve",
-    "chihuo2104"
+    "mzwing"
   ],
   "devDependencies": {
     "concurrently": "^7.3.0",
@@ -44,6 +42,6 @@
     "wait-on": "^6.0.1"
   },
   "bugs": {
-    "url": "https://github.com/bbg-contributors/bbg-esm/issues"
+    "url": "https://github.com/mt-vite/mt-vite-vanilla-demo/issues"
   }
 }
