--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "lint:html": "htmlhint \"**/*.html\""
   },
   "maintainers": [
-    "mzwing"
+    "mzwing",
+    "so1ve",
+    "chihuo2104"
   ],
   "devDependencies": {
     "concurrently": "^7.3.0",
